add visit count static

--- a/index.html
+++ b/index.html
@@ -65,4 +65,8 @@
     <li>Email:<a href="mailto:andrewgoldstein@gmail.com" >andrewgoldstein@gmail.com</a></li>
     <li><a href="https://github.com/muckitymuck" >https://github.com/muckitymuck</a></li>    <li><a href="https://www.linkedin.com/in/andrewsgoldstein/" >www.linkedin.com/in/andrewsgoldstein</a></li>
   </ul>
+  <div>
+    <p style = "text-align: center;">
+    Visits: <span id="visits">0</span>
+    </p>
 </div>
