--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
   <br>
   <div>
     <p style = "text-align: center;">
-    Visits: <span id="visits">13</span>
+    Visits: <span id="visits"><script src="script.js"></script></span>
     </p>
 </div>
