--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
   <br>
   <div>
     <p style = "text-align: center;">
-    Visits: <span id="visits"><script src="script.js"></script></span>
+    Visits: <span id="visits"></span>
     </p>
+    <p id="count"></p>
+    <script src="script.js"></script>
+
 </div>
