--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
     Visits: <span id="visits"></span>
     </p>
     <p id="count"></p>
-    <script src="script.js"></script>
+    <script src="fetchscript.js"></script>
 
 </div>
