--- a/index.html
+++ b/index.html
@@ -71,4 +71,8 @@
     <p style = "text-align: center;">
     Visits: <span id="visits">13</span>
     </p>
+    <body>
+      <div class="container"></div>
+      <script src="app.js"></script>
+    </body>
 </div>
