--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
     </p>
     <body>
       <div class="container"></div>
-      <script src="app.js"></script>
+      <script src="js/app.js"></script>
     </body>
 </div>
