--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <p style = "text-align: center;">
     Visits: <span id="visits">13</span>
     </p>
+    <p id="demo"></p>
     <body>
       <div class="container"></div>
-      <script src="js/app.js"></script>
+      <script src="js/app.js">document.getElementById("demo").innerHTML = 5 + 6;</script>
     </body>
 </div>
