--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
   </ul>
   <br>
   <br>
+  <p>Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/">Cloud Resume Challenge</a><br/> </p>
+  <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal">My Blog Post on the Project</a></p></br>
   <div>
     <p style = "text-align: center;">
     Visits: <span id="visits">13</span><p id="demo"></p>
-    </p>
 
-    <p>Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/">Cloud Resume Challenge</a><br/> </p>
-    <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal">My Blog Post on the Project</a></p>
+    </p>
     <script>
       fetch('https://4lnixszdo4.execute-api.us-east-2.amazonaws.com/test/visitcount')
           .then(response => response.json())
