--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
           })
           .catch(error => console.error(error))
     </script>
-
+{% comment %} Make a Change for the better! {% endcomment %}
   </div>
 </body>
