--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
           })
           .catch(error => console.error(error))
     </script>
-
+<!--HI! 
+Thanks for checking my code! -->
   </div>
 </body>
