network solutions add

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="stuff">
   <br><br>
   <h1 class="sansserif">Andrew Goldstein</h1>
-  <h2 class="sansserif">Information Security</h2>
+  <h2 class="sansserif">Network Solutions</h2>
   <hr />
   <br>
   <a href ="http://www.westcpa.com/">
