pretty up words

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <hr />
   <br>
   <a href ="http://www.westcpa.com/">
-  <p class="head">Network Admin Intern, West & Company <br>
+  <p class="head">Network Admin Intern, <u>West & Company</u> <br>
     <i>Jan 2020 -Feb 2020</i></p>
 </a>
   <ul>
@@ -30,7 +30,7 @@
     <li>Active Directory/Group Policy, Hyper-V Admin</li>
     <li>Sonicwall Firewall/VPN, Symantec Endpoint Protection</li>
   </ul>
-      <a href="https://www.teksystems.com/en/locations?LatLong=47.6150436,%20-122.1717577&Address=98005&Radius="><p class="head">QA Technician, TekSystems(Amazon,T-Mobile)<br>
+      <a href="https://www.teksystems.com/en/locations?LatLong=47.6150436,%20-122.1717577&Address=98005&Radius="><p class="head">QA Technician, <u>TekSystems(Amazon,T-Mobile)</u><br>
         <i>Nov 2012-Sep 2014</i></p>
   </a><!--Link-->
   <ul>
@@ -43,7 +43,7 @@
     
   </ul>
   <br>
-  <p class="head">Education</p>
+  <p class="head"><u>Education</u></p>
   <p class="head">Lake Land College<br>
     <i>Network Security Program(Completion May 2021)</i></p>
   <ul>
@@ -68,8 +68,8 @@
   </ul>
   <br>
   <br>
-  <p>Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/">Cloud Resume Challenge</a><br/> </p>
-  <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal">My Blog Post on the Project</a></p></br>
+  <p>Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/"><u>Cloud Resume Challenge</u></a><br/> </p>
+  <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal"><u>My Blog Post on the Project</u></a></p></br>
   <div>
     <p style = "text-align: center;">
     Visits: <span id="visits">13</span><p id="demo"></p>
