--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
           .catch(error => console.error(error))
     </script>
 <!--HI! 
-Thanks for checking my code! It can update!    -->
+Thanks for checking my code! It can update!  But don't push it!  -->
   </div>
 </body>
