updated resume files

--- a/index.html
+++ b/index.html
@@ -1,90 +1,162 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="AgoldsteinResume.css">
-<div id="header"></div>
-<div class="left"></div>
-<body>
-<div class="stuff">
-  <br><br>
-  <h1 class="sansserif">Andrew Goldstein</h1>
-  <h2 class="sansserif">Network Solutions</h2>
-  <hr />
-  <br>
-  <a href ="http://www.westcpa.com/">
-  <p class="head">Network Admin Intern, <u>West & Company</u> <br>
-    <i>Jan 2020 -Feb 2020</i></p>
-</a>
-  <ul>
-    <li>Design and configure test Hyper-V network with Remote Services</li>
-    <li>Vulnerability Audit of Financial customers</li>
-    <li>Windows Server 2019, XenServer, RDS, Certificate Authority</li>
-    <li>Nessus, OSINT</li>
-  </ul>
-  <p class="head">IT Manager, Hodgson Mill<b>(Closed)</b><br>
-    <i>Feb 2015 - Apr 2019</i></p>
-  <ul>
-    <li>Implemented new VOIP system, Remote Desktop Support</li>
-    <li>Long Range Wireless Bridge</li>
-    <li>Active Directory/Group Policy, Hyper-V Admin</li>
-    <li>Sonicwall Firewall/VPN, Symantec Endpoint Protection</li>
-  </ul>
-      <a href="https://www.teksystems.com/en/locations?LatLong=47.6150436,%20-122.1717577&Address=98005&Radius="><p class="head">QA Technician, <u>TekSystems(Amazon,T-Mobile)</u><br>
-        <i>Nov 2012-Sep 2014</i></p>
-  </a><!--Link-->
-  <ul>
-      <li>Web application testing, Accessibility</li>
-    <li>Localization and GPS testing</li>
-    <li>Create and Adapt Test Cases</li>
-    <li>Mobile, Wifi, Bluetooth testing</li>
-    <li>Jira bug tracking</li>
-    <li>Android Mobile Development Environment setup</li>
-    
-  </ul>
-  <br>
-  <p class="head"><u>Education</u></p>
-  <p class="head">Lake Land College<br>
-    <i>Network Security Program(Completion May 2021)</i></p>
-  <ul>
-    <li>Threats, Prevention, and Mitigation</li>
-    <li>Networking Architecture and Protocol</li>
-    <li>Programming</li>
-    <li>Web Technology</li>
-  </ul>
-  <p class="head">Bellevue College<br> <i>Software Testing and Quality Assurance Certificate 2012</i></p>
-  <ul>
-    <li>Programming, Software Test Methodology
-    </li>
-  </ul>
-  <p class="head">Southern Illinois University at Carbondale
-<br>
-    <i>BS Business and International Trade, 2004</i></p>
-  <br>
- <p class="head">Contact:</p>
-  <ul>
-    <li>Email:<a href="mailto:andrewgoldstein@gmail.com" >andrewgoldstein@gmail.com</a></li>
-    <li><a href="https://github.com/muckitymuck" >https://github.com/muckitymuck</a></li>    <li><a href="https://www.linkedin.com/in/andrewsgoldstein/" >www.linkedin.com/in/andrewsgoldstein</a></li>
-  </ul>
-  <br>
-  <br>
-  <p>Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/"><u>Cloud Resume Challenge</u></a><br/> </p>
-  <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal"><u>My Blog Post on the Project</u></a></p></br>
-  <div>
-    <p style = "text-align: center;">
-    Visits: <span id="visits">13</span><p id="demo"></p>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Resume - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Andrew Goldstein</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="" /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Andrew
+                        <span class="text-primary">Goldstein</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Network Solutions
+                        <a href="mailto:name@email.com">andrewgoldstein@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">I am experienced in building robust network solutions for users locally and in the Cloud.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/andrewsgoldstein/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/muckitymuck"><i class="fab fa-github"></i></a>
 
-    </p>
-    <script>
-      fetch('https://4lnixszdo4.execute-api.us-east-2.amazonaws.com/test/visitcount')
-          .then(response => response.json())
-          .then(data => {
-          console.log(data) // Prints result from `response.json()` in getRequest
-          document.getElementById("visits").innerHTML = data;
-          })
-          .catch(error => console.error(error))
-    </script>
-<!--HI! 
-Thanks for checking my code! It can update!  But don't push it!  -->
-  </div>
-</body>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Network Admin Intern</h3>
+                            <div class="subheading mb-3">West & Company</div>
+                            <p>Designing and configuring a new test Hyper-V network with Remote Services and participate in Vulnerability Audit for financial customers</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - February 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">IT Manager</h3>
+                            <div class="subheading mb-3">Hodgson Mill(Closed)</div>
+                            <p>-Implemented new VOIP system, Hyper-V Server, Desktop Support, Installed WAN system, Active Directory/Group Policy, Office 365
+                                </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2015 - April 2019</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">QA Technician</h3>
+                            <div class="subheading mb-3">TekSystems(Amazon and TMobile)</div>
+                            <p>Android Device app network and usability testing focussing on GPS, cellular and wifi connectivity.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2012 - September 2014</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Southern Illinois University Carbondale</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Business Administration</div>
+                        </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Lake Land College</h3>
+                            <div class="subheading mb-3">Network Admin Certification</div>
+                        </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fas fa-user-secret"></i></li>
+                    </ul>
+                    <div class="subheading mb-3">Workflow</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Mobile-First, Responsive Design
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Browser Testing & Debugging
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Functional Teams
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Agile Development & Scrum
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Interests-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Interests</h2>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
