--- a/index.html
+++ b/index.html
@@ -46,11 +46,31 @@
                         Network Solutions
                         <a href="mailto:name@email.com">andrewgoldstein@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in building robust network solutions for users locally and in the Cloud.</p>
+                    <p class="lead mb-5">I am experienced in building robust network solutions for users locally and in the Cloud.
+                    Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/"><u>Cloud Resume Challenge</u></a><br/> </p>
+  <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal"><u>My Blog Post on the Project</u></a></p>
+                        <p style = "text-align: center;">
+    Visits: <span id="visits">13</span><p id="demo"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/andrewsgoldstein/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/muckitymuck"><i class="fab fa-github"></i></a>
+                        <div>
+    <p style = "text-align: center;">
+    Visits: <span id="visits">13</span><p id="demo"></p>
 
+    </p>
+    <script>
+      fetch('https://4lnixszdo4.execute-api.us-east-2.amazonaws.com/test/visitcount')
+          .then(response => response.json())
+          .then(data => {
+          console.log(data) // Prints result from `response.json()` in getRequest
+          document.getElementById("visits").innerHTML = data;
+          })
+          .catch(error => console.error(error))
+    </script>
+        <!--HI! 
+                Thanks for checking my code! It can update!  But don't push it!  maybe last time? -->
+  </div>
                     </div>
                 </div>
             </section>
