--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>I enjoy most of my time being with my family. When times are quiet, I enjoy researching latest news in Information Technology or just reading.</p>
+                    <p class="mb-0"></p>
                 </div>
             </section>
             <hr class="m-0" />
