--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Resume- Andrew Goldstein</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -50,7 +50,7 @@
                     Project part of Cloud Resume Challenge:<a href="https://cloudresumechallenge.dev/"><u>Cloud Resume Challenge</u></a><br/> </p>
   <p><a href="https://dev.to/muckitymuck/100-days-of-cloud-resume-challenge-3jal"><u>My Blog Post on the Project</u></a></p>
                         <p style = "text-align: center;">
-    Visits: <span id="visits">13</span><p id="demo"></p>
+    Visits: <span id="visits">13   </span><i class="fas fa-info-circle" title="Page Views powered by AWS Lambda and DynamoDB"></i>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/andrewsgoldstein/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/muckitymuck"><i class="fab fa-github"></i></a>
@@ -67,7 +67,7 @@
           .catch(error => console.error(error))
     </script>
         <!--HI! 
-                Thanks for checking my code! It can update!  But don't push it!  maybe last time? -->
+                Thanks for checking my code! It can update!  But don't push it!  8-12-2020 -->
   </div>
                     </div>
                 </div>
