--- a/index.html
+++ b/index.html
@@ -115,11 +115,17 @@
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Business Administration</div>
                         </div>
+                    <div class="flex-shrink-0">
+                        <span class="text-primary">May 1998 - Dec 2004</span>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Lake Land College</h3>
                             <div class="subheading mb-3">Network Admin Certification</div>
                         </div>
+                    <div class="flex-shrink-0">
+                        <span class="text-primary">June 2019 - May 2021</span>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
