--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                        <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Southern Illinois University Carbondale</h3>
@@ -117,16 +117,33 @@
                         </div>
                     <div class="flex-shrink-0">
                         <span class="text-primary">May 1998 - Dec 2004</span>
-                    </div>
+                        </div>
+                    </div>    
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Lake Land College</h3>
                             <div class="subheading mb-3">Network Admin Certification</div>
+                            <div>Practical Networking Principles and Technology</div>
+                            <br/>
+                            <br/>
                         </div>
-                    <div class="flex-shrink-0">
-                        <span class="text-primary">June 2019 - May 2021</span>
+                        <div class="flex-shrink-0">
+                            <span class="text-primary">June 2019 - May 2021</span>
+                        </div>
+                        <br/>
                     </div>
-                </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Short Courses</h3>
+                            <div class="subheading mb-3">Bellevue College: Software Testing</div>
+                            <div class="subheading mb-3">Udacity: AWS Machine Learning Foundations</div>
+                            <div class="subheading mb-3">Udemy: Practical Ethical Hacking</div>
+                            <div class="subheading mb-3">Offensive Security: OSCP certification</div>
+                        </div>
+                        <!--<div class="flex-shrink-0">
+                            <span class="text-primary">June 2019 - May 2021</span>
+                        </div>-->
+                    </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
