--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#aboutHere">About Here</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -72,6 +73,20 @@
                     </div>
                 </div>
             </section>
+            <hr class="m-0" />
+            <!-- About Here-->
+            <section class="resume-section" id="aboutHere">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">About Here</h2>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-info-circle" title="3.CloudFront requests files from S3 Static Website Bucket"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-info-circle" title="2.CloudFront Requests and Delivers HTTPS"></i><br />
+                    <img src="pics\AWSMuckitymuckcom.png" alt="That Me!" width="700" height="600">
+                    </span><i class="fas fa-info-circle" title="1.Browser makes request to muckitymuck.com"></i>
+                    <p class="mb-0"></p>
+                </div>
+            </section>                
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-info-circle" title="4.Page Loading triggers request to Lambda/DynamoDB Page View Counter"></i>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-info-circle" title="5.Final page is Delivered"></i>
+
             <hr class="m-0" />
             <!-- Experience-->
             <section class="resume-section" id="experience">
