--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
             <section class="resume-section" id="aboutHere">
                 <div class="resume-section-content">
                     <h2 class="mb-5">About Here</h2>
-                    <img src="pics\AWSMuckitymuckcom.png" alt="That Me!" width="700" height="600">
+                    <img src="pics\AWSMuckitymuckcom.png" alt="This Site!" width="700" height="600">
                     <p class="mb-0"></p>
+                
+                <br />
+                    <img src="pics\CICDprocess.png" alt="CI/CD Process" width="375" height="600">
+                    <p class="mb-0"></p>
+                </div>
                 </div>
             </section>                
 
