--- a/bugtracker/index.html
+++ b/bugtracker/index.html
@@ -181,15 +181,15 @@
                                 <div class="table-responsive">
                                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                         
-                                        <!--
+                                       
                                         <thead>
                                             <tr>
-                                                <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
+                                                <th>bugID</th>
+                                                <th>priority</th>
+                                                <th>title</th>
+                                                <th>version</th>
+                                                <th>Description</th>
+                                                <th>created</th>
                                             </tr>
                                         </thead>
                                         <tfoot>
@@ -202,6 +202,7 @@
                                                 <th>Salary</th>
                                             </tr>
                                         </tfoot>
+                                        <!--
                                         <tbody>
                                             <tr>
                                                 <td>Tiger Nixon</td>
@@ -669,7 +670,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2020</div>
+                            <div class="text-muted">Copyright &copy; muckitymuck 2020</div>
                             <div>
                                 <a href="#">Privacy Policy</a>
                                 &middot;
