--- a/bugtracker/index.html
+++ b/bugtracker/index.html
@@ -694,8 +694,12 @@
         <script>
             fetch('https://o6xol319xj.execute-api.us-east-1.amazonaws.com/default/bugtracker')
                 .then(response => response.json())
-                .then(data => {
-                console.log(data) // Prints result from `response.json()` in getRequest
+                .then(json => console.log(json))
+                
+                //old
+                //.then(data => {
+                //console.log(data) // Prints result from `response.json()` in getRequest
+                
                 document.getElementById("dataTable").innerHTML = data;
                 })
                 .catch(error => console.error(error))
