--- a/bugtracker/index.html
+++ b/bugtracker/index.html
@@ -695,6 +695,7 @@
             fetch('https://o6xol319xj.execute-api.us-east-1.amazonaws.com/default/bugtracker')
                 .then(response => response.json())
                 .then(json => console.log(json))
+                .then(document.getElementById("dataTable").innerHTML = json;)
                 .catch(error => console.error(error));                
                 //old
                 //.then(data => {
