--- a/bugtracker/index.html
+++ b/bugtracker/index.html
@@ -188,6 +188,7 @@
                                                 <th>priority</th>
                                                 <th>title</th>
                                                 <th>Description</th>
+                                                <th>progress</th>
                                             </tr>
                                         </thead>
                                         <tfoot>
@@ -196,6 +197,7 @@
                                                 <th>priority</th>
                                                 <th>title</th>
                                                 <th>Description</th>
+                                                <th>progress</th>
                                             </tr>
                                         </tfoot>
                                         
@@ -703,6 +705,7 @@
                         temp += "<td>"+u.priority+"</td>";
                         temp += "<td>"+u.Description+"</td>";
                         temp += "<td>"+u.title+"</td>";
+                        temp += "td>"+u.progress"</td>";
                     })
                     //close for loop
                     document.getElementById("dataTable").innerHTML = temp;
