--- a/bugtracker/index.html
+++ b/bugtracker/index.html
@@ -705,7 +705,7 @@
                         temp += "<td>"+u.priority+"</td>";
                         temp += "<td>"+u.Description+"</td>";
                         temp += "<td>"+u.title+"</td>";
-                        temp += "td>"+u.progress"</td>";
+                        temp += "<td>"+u.progress"</td>";
                     })
                     //close for loop
                     document.getElementById("dataTable").innerHTML = temp;
