--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Support Specialist I</h3>
+                            <div class="subheading mb-3">Patterson Companies</div>
+                            <p>Troubleshoot and optimize Software and Network settings</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Network Admin Intern</h3>
                             <div class="subheading mb-3">West & Company</div>
                             <p>Designing and configuring a new test Hyper-V network with Remote Services and participate in Vulnerability Audit for financial customers</p>
