--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                             <h3 class="mb-0">Support Specialist I</h3>
                             <div class="subheading mb-3">Patterson Companies</div>
                             <p>Troubleshoot and optimize Software and Network settings</p>
+                            <p>Communicate standards and resolutions to customers</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2020 - Present</span></div>
                     </div>
@@ -113,7 +114,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">IT Manager</h3>
                             <div class="subheading mb-3">Hodgson Mill(Closed)</div>
-                            <p>-Implemented new VOIP system, Hyper-V Server, Desktop Support, Installed WAN system, Active Directory/Group Policy, Office 365
+                            <p>Implemented new VOIP system, Hyper-V Server, Desktop Support, Installed WAN system, Active Directory/Group Policy, Office 365
                                 </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2015 - April 2019</span></div>
